--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -338,7 +338,7 @@
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*) [(video)](https://youtu.be/A7Fh_8CF1QA)"
     - name: "10:00 - 12:00 Work on Group Projects (*Zoom*)"
-    - name: '12:00 - 1:00 New Frontiers in Research and Technology: "The Future of Research and Equity in the Metaverse" Panel [(LIVE Q&A - Webex)](https://mathematicaevents.webex.com/mathematicaevents/j.php?RGID=r0f13d45c103df0b3c25939792dcddacf)
+    - name: '12:00 - 1:00 New Frontiers in Research and Technology: "The Future of Research and Equity in the Metaverse" Panel [(LIVE Q&A)](https://youtu.be/jwr8PNG0drs)
         
       
      
@@ -428,7 +428,7 @@
     
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Work on Group Projects (*Zoom*)"
-    - name: "1:00 - 1:20 Overview of Group and Individual Project Presentations (*Zoom*) [(video)](https://youtu.be/AhDxHjI_y20) & Surprise LIVE Midday Motivation Safiya Noble, Ph.D. (*Zoom*) (video)"
+    - name: "1:00 - 1:20 Overview of Group and Individual Project Presentations (*Zoom*) [(video)](https://youtu.be/AhDxHjI_y20) & Surprise LIVE Midday Motivation Safiya Noble, Ph.D. (*Zoom*) [(video)](https://youtu.be/toNIP76dNZo)"
     - name: "1:20 - 4:00 Group and Individual Project Presentations (*Zoom*)"
     - name: "4:00 - 5:00 Closing Plenary and Q&A, Mathematica (*Zoom*) (video)
     
