jias: people update

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -8,7 +8,7 @@ organisers:
       intersections of society and digital technology."
 
 facilitators:
-  title: Facilitator
+  title: Sessional Facilitator
   people:
     - name: Zimasa Ndamase
       image: /assets/images/jias_zimasa.jpg
