Oxford - Update Schedule

--- a/_data/2022/oxford/schedule.yml
+++ b/_data/2022/oxford/schedule.yml
@@ -28,11 +28,11 @@
 - date: July 6, 2022
   name: "Digital Trace and Geo-spatial Analysis"
   events:
-    - name: "09:30-10:45 Workshop Ridhi Kashyap: Digital Trace Data"
+    - name: "09:30-10:45 Workshop Ridhi Kashyap: [Digital Trace Data](https://sicss.io/2022/materials/ridhi_kashyap/kashyap_digital_trace_data-oxford.pdf)"
     - name: "10:45-11:15 Coffee Break"
     - name: "11:15-12:30 Workshop Douglas Leasure: Monitoring population displacement in Ukraine through social media activity"
     - name: "12:30-14:00 Lunch at Nuffield College"
-    - name: "14:00-15:15 Workshop Tobias Rüttenauer: Geospatial Data"
+    - name: "14:00-15:15 Workshop Tobias Rüttenauer: [Geospatial Data](https://github.com/ruettenauer/SICSS-Spatial2022)" 
     - name: "15:15-16:45 Group exercise: Ridhi and Tobi"
     - name: "17:00-18:00 Research Talk Douglas Leasure: Geospatial methods to estimate populations for census support"
 
