--- a/_data/2022/aachen-graz/schedule.yml
+++ b/_data/2022/aachen-graz/schedule.yml
@@ -2,68 +2,73 @@
 
 - date: July 17, 2022
   events:
-    - name: "Meet-and-greet"
+    - name: "19:00—21:00 Get-together of participants and lecturers"
 
 - date: July 18, 2022
   events:
-    - name: "09:30 What is computational social science (CSS) really? *by Ivan Smirnov*"
-    - name: "10:30 Exercises/Group activity"
-    - name: "12:00 Lunch"
-    - name: "13:00 How digital trace data could help to answer social science questions? *by Ivan Smirnov*"
-    - name: "14:30 Guest lecture: Introduction to using the Twitter API to collect insane amounts of data *by Suhem Parack*"
-   
+    - name: "09:30-10:00 Welcome, introductions, overview over programme and organization"
+    - name: "10:00-11:15 Lecture: What is computational social science (CSS) really"
+    - name: "11:15-11:30 Break"
+    - name: "11:30-12:45 Lecture: How digital trace data could help to answer social science questions?"
+    - name: "12:45-13:45 Lunch"
+    - name: "13:45-14:00 Introduction to exercise: Using digital trace data to answer social science questions"
+    - name: "14:00-16:30 Exercise: Using digital trace data to answer social science questions"
+
 - date: July 19, 2022
   events:
-    - name: "09:30 Harnessing web scraping and APIs to collect data *by Jana Lasser*"
-    - name: "10:30 Exercises/Group activity"
-    - name: "12:00 Lunch"
-    - name: "13:00 Digitally powered surveys *by Jana Lasser*"
-    - name: "14:30 Exercises/Group activity"
+    - name: "09:30-10:30 Lecture: Harnessing web scraping and APIs to collect data"
+    - name: "10:30-12:00 Exercise: Using different APIs to collect data"
+    - name: "12:00-13:00 Lunch"
+    - name: "13:00-14:00 Guest lecture by *Anna Di Natale*: How to use Amazon Mechanical Turk to run digitally powered surveys"
+    - name: "14:00-15:45 Exercise: Using Amazon Mechanical Turk to collect data"
+    - name: "15:45-16:00 Break"
+    - name: "16:00-17:30 Guest lecture by *Suhem Parack*: Introduction to using the Twitter API to collect insane amounts of data"
 
 - date: July 20, 2022
   events:
-    - name: "09:30 Combining surveys and Big Data *by David Garcia*"
-    - name: "10:30 Exercises/Group activity"
-    - name: "12:00 Lunch"
-    - name: "13:00 Introduction to networks in CSS *by Markus Strohmaier*"
-    - name: "14:30 Exercises/Group activity"
+    - name: "09:30-10:30 Guest lecture by *David Garcia*: Combining surveys and Big Data"
+    - name: "10:30-12:30 Exercise: Using transformer models to extract information from text and 
+combine them with data from surveys"
+    - name: "12:30-13:30 Lunch"
+    - name: "13:30-15:00 Guest lecture by *Markus Strohmaier*: Introduction to networks in CSS"
+    - name: "15:00-16:30 Exercise: Analysis of retweet networks of Swiss politicians"
    
 - date: July 21, 2022
   events:
-    - name: "09:30 How to write a (good!) CSS paper *by Ivan Smirnov*"
-    - name: "10:30 Exercises/Group activity"
-    - name: "12:00 Lunch"
-    - name: "13:00 Visualize your data: DOs and DON’Ts *by Jana Lasser*"
-    - name: "14:30 Exercises/Group activity"
+    - name: "09:30-10:45 Lecture: How to write a (good!) CSS paper"
+    - name: "10:45-12:30 Group activity and discussion on how to write a good CSS paper"
+    - name: "12:30-13:30 Lunch"
+    - name: "13:30-14:30 Lecture: VLisualize your data: DOs and DON’Ts"
+    - name: "14:30-16:30 Exercise: Creating informative visualizations using Python"
+    - name: "17:30-20:00 [optional] geo-caching in Aachen & Graz"
 
 - date: July 22, 2022
   events:
-    - name: "09:30 Potential pitfalls and problems for awesome CSS projects *by Ivan Smirnov*"
-    - name: "10:30 Exercises/Group activity"
-    - name: "12:00 Lunch"
-    - name: "13:00 Ethical dimensions of CSS research *by Jana Lasser*"
-    - name: "14:30 Exercises/Group activity"
+    - name: "09:30-11:00 Lecture: Potential pitfalls and problems for awesome CSS projects"
+    - name: "11:00-12:30 Lecture: Ethical dimensions of CSS research"
+    - name: "12:30-13:30 Lunch"
+    - name: "13:30-15:30 Project idea generation & group formation"
 
 - date: July 25, 2022
   events:
-    - name: "Work on group projects"
-    - name: "16:00 Guest lecture *by Chris Bail*"
+    - name: "09:30-16:30 Work on projects"
+    - name: "16:00-17:30 Guest lecture by *Chris Bail*"
 
 - date: July 26, 2022
   events:
-    - name: "Work on group projects"
-    - name: "16:00 Guest lecture *by Roberta Sinatra*"
+    - name: "09:30-16:30 Work on projects"
+    - name: "16:00-17:30 Guest lecture by *Roberta Sinatra*"
 
 - date: July 27, 2022
   events:
-    - name: "Work on group projects"
-    - name: "16:00 Guest lecture *by Alina Arseniev-Koehler*"
+    - name: "09:30-16:30 Work on projects"
+    - name: "16:00-17:30 Guest lecture by *Alina Arseniev-Koehler*"
 
 - date: July 28, 2022
   events:
-    - name: "Work on group projects"
+    - name: "09:30-16:30 Work on projects and presentations"
 
 - date: July 29, 2022
   events:
-    - name: "Project presentations"
-    - name: "Debrief and Conclusion"
+    - name: "09:30-16:00 Work on project presentations"
+    - name: "13:00-16:00 Project presentations"
