--- a/_data/2022/roma-tor-vergata/participants.yml
+++ b/_data/2022/roma-tor-vergata/participants.yml
@@ -57,6 +57,10 @@
 - name: Maribel Dano-Luna
   bio: "I’m a PhD Candidate from the School of Economics at the University of Sydney. My PhD research is in modelling inclusive firms and empirically testing the implications of an inclusive business accreditation policy on firm behaviour, social welfare, and incentive design. I have previously conducted research on the drivers of SME competitiveness as a former Senior Researcher at Asian Institute of Management RSN Policy Center for Competitiveness. I was also a consultant at Asian Development Bank."
   image: /assets/images/roma-tv/maribel.jpg
+
+- name: Nantina Vgontzas
+  bio: "Nantina Vgontzas received their PhD in sociology from New York University and is a postdoctoral researcher at the AI Now Institute. Their research sits at the intersection of global political economy, technology, and labor. Currently, they are writing a book about the shopfloor politics of retail supply chains as it relates to crises in care and climate infrastructures. Nantina was previously a fellow at the Urban Democracy Lab and Center for Engaged Scholarship. "
+  image: /assets/images/roma-tv/nantina.jpg
   
 - name: Oriana Milanese
   bio: "I am an Italian student in “Global Governance” at the University of Rome “Tor Vergata.” I have always been interested in social sciences. One of my main purposes has always been to understand how the world works. Before studying statistics, I used to think that numbers were mainly related to natural sciences only, but this subject showed me the importance of quantitative methods in social sciences as well. Furthermore, as an intern in an NGO, I discovered the importance of data to assess the quality and the impact of all those kinds of third sector programs aimed at improving the well-being of people. Thus, these “discoveries” made me think about a future career in the field of public policy and economics. For all these reasons, I decided to join the SICSS in Rome. Learning a new programming language and discovering a new and truly interdisciplinary subject, such as computational social science, will be highly beneficial for my academic and professional future. Last but not least, I can’t look forward to being part of such a heterogeneous class and meeting new people from all over the world!"
@@ -81,8 +85,6 @@
 - name: Thiago Matheus
   bio: "I have been a Legislative Analyst at the Brazilian Chamber of Deputies since 2013, when I started my studies in Electoral Law and Political Science and developed my interest in applying statistical and computational sciences in this area. My research is focused on the relationships between electoral and party systems. The thesis of my current Professional Master seeks to study the coattail effect of local elections in the fragmentation of the Brazilian Legislative Branch. I am interested in research related to underrepresented groups in politics too. My educational background also includes a Bachelor's degree in Physics and Statistics, having completed a Master in Physics in 2008. I had professional experience as a Physics teacher at the Brasília Department of Education for two years and as a statistician at the Superior Labor Court between 2008 and 2013. In 2017, I obtained the bachelor's degree in law with a thesis that analyzed the proceedings in the National Congress of the project about the SNTV (Single Non-Transferable Vote)."
   image: /assets/images/roma-tv/thiagomatheus.jpg
-  
-- name: Xiao Yin
 
 - name: Yuyi Shen 
   bio: "I’m a second-year Master's student in Development Studies at the Geneva Graduate Institute and I graduated from the School of International Studies in Peking University as a bachelor of laws last summer. I'm Interested in food security and environmental protection. Currently I'm developing skills in statistical analysis/visualization and project management in order to be a better development practitioner in the future."
