--- a/_data/2022/haifa/faculty.yml
+++ b/_data/2022/haifa/faculty.yml
@@ -22,3 +22,8 @@
   bio: "Tamir is the Administrative Manager of SICSS Haifa program and he is the Administrative Manager of DSRC – The University of Haifa’s Data Science Research Center and of CRI - Caesarea Rothschild Institute for Interdisciplinary Applications of Computer Science."
   image: /assets/images/Tamir_Gadot.jpg
   website: https://dsrc.haifa.ac.il
+  
+- name: Netta Palez
+  bio: "Netta is part of the administrative team of SICSS Haifa program and the Data Curator and Project Manager of DSRC – The University of Haifa’s Data Science Research Center."
+  image: /assets/images/Netta_Palez.jpg
+  website: https://dsrc.haifa.ac.il
