Oxford - Add links to schedule 2

--- a/_data/2022/oxford/schedule.yml
+++ b/_data/2022/oxford/schedule.yml
@@ -39,9 +39,9 @@
 - date: July 7, 2022
   name: "Non-Random Probability Sampling and Post-Stratification"
   events:
-    - name: "09:30-10:45 Workshop Oriol/Francesco: Non-Random Probability Sampling and Post-Stratification"
+    - name: "09:30-10:45 Workshop Oriol/Francesco: [Non-Random Probability Sampling and Post-Stratification](https://github.com/chiccorampazzo/SICSS-Oxford-2022)"
     - name: "10:45-11:15 Coffee Break"
-    - name: "11:15-12:30 Workshop Oriol/Francesco: Non-Random Probability Sampling and Post-Stratification"
+    - name: "11:15-12:30 Workshop Oriol/Francesco: [Non-Random Probability Sampling and Post-Stratification](https://github.com/chiccorampazzo/SICSS-Oxford-2022)"
     - name: "12:30-14:00 Lunch at Nuffield College"
     - name: "14:00-16:00 Group Exercise: Maksim and Francesco"
     - name: "16:00-18:00 Research Talk: Meta"
