Oxford - Add links to schedule 3

--- a/_data/2022/oxford/schedule.yml
+++ b/_data/2022/oxford/schedule.yml
@@ -12,7 +12,7 @@
     - name: "11:30-12:30 Workshop Cassandra Gould Van Praag: An Introduction to Version Control"
     - name: "12:30-14:00 Lunch at Nuffield College"
     - name: "14:00-14:30 Workshop Georgia Richards: on Open Science and OSF"
-    - name: "14:30-16:00 Workshop Adam Kenny: Reproducible Research and Reproducible Manuscripts"
+    - name: "14:30-16:00 Workshop Adam Kenny: [Reproducible Research and Reproducible Manuscripts](https://osf.io/prbjm/)"
     - name: "16:00-17:00 Research Talk Tom Douglas: on The Ethics of Predicting Behaviour"
 
 - date: July 5, 2022
