--- a/_data/2022/india/schedule.yml
+++ b/_data/2022/india/schedule.yml
@@ -1,3 +1,1 @@
-- date: July 11, 2022
-  events:
-    - name: "Schedule coming soon..."
+[Schedule](https://docs.google.com/spreadsheets/d/1bis7eTJezcFlNM2UGIFW53mzte_QqIgUkUVCjd5_-BI/)
