--- a/_data/2022/india/schedule.yml
+++ b/_data/2022/india/schedule.yml
@@ -1,1 +1,1 @@
-[Schedule](https://docs.google.com/spreadsheets/d/1bis7eTJezcFlNM2UGIFW53mzte_QqIgUkUVCjd5_-BI/)
+- date: [Schedule](https://docs.google.com/spreadsheets/d/1bis7eTJezcFlNM2UGIFW53mzte_QqIgUkUVCjd5_-BI/)
