Oxford - Update schedule

--- a/_data/2022/oxford/schedule.yml
+++ b/_data/2022/oxford/schedule.yml
@@ -39,7 +39,7 @@
 - date: July 7, 2022
   name: "Non-Random Probability Sampling and Post-Stratification"
   events:
-    - name: "09:30-10:45 Workshop Oriol/Francesco: [Non-Random Probability Sampling and Post-Stratification](https://github.com/chiccorampazzo/SICSS-Oxford-2022)"
+    - name: "09:30-10:45 Workshop Oriol/Francesco: [Non-Random Probability Sampling and Post-Stratification](https://orioljbosch.com/talks/22022-SICSS-Oxford)"
     - name: "10:45-11:15 Coffee Break"
     - name: "11:15-12:30 Workshop Oriol/Francesco: [Non-Random Probability Sampling and Post-Stratification](https://github.com/chiccorampazzo/SICSS-Oxford-2022)"
     - name: "12:30-14:00 Lunch at Nuffield College"
