--- a/_data/2022/tokyo/schedule.yml
+++ b/_data/2022/tokyo/schedule.yml
@@ -1,3 +1,41 @@
-- date: August 1, 2022
-  events:
-    - name: "Schedule coming soon..."
+
+- date: All times are in Japan Standard Time (UTC+9)
+
+- date: 2022-08-01
+  name: Introduction
+  events: 
+    - name: "9:00 - 9:30 Welcome and Logistics"
+    - name: "9:30 - 11:00 What is Computational Social Science?"
+    - name: "11:00 - 12:00 Research Talk by Hirokazu Shirado"
+    - name: "12:00 - 13:00 Break"
+    - name: "13:00 - 14:30 Flash Talk by Participants"
+
+- date: 2022-08-02
+  name: Digital Trace Data
+  events: 
+    - name: "9:00 - 11:00 Digital Trace Data"
+    - name: "11:00 - 12:00 Discussion on Digital Trace Data"
+    - name: "12:00 - 13:00 Break"
+    - name: "13:00 - 14:30 Automated Text Analysis"
+
+- date: 2022-08-03
+  name: Experiments
+  events: 
+    - name: "9:00 - 11:00 Experiments"
+    - name: "11:00 - 12:00 Discussion on Experiments"
+    - name: "12:00 - 13:00 Break"
+    - name: "13:00 - 14:30 In-class Experiment: Evacuation Game"
+
+- date: 2022-08-04
+  name: Surveys and Ethics
+  events: 
+    - name: "9:00 - 11:00 Surveys"
+    - name: "11:00 - 12:00 Discussion on Surveys"
+    - name: "12:00 - 13:00 Break"
+    - name: "13:00 - 14:30 Ethics"
+
+- date: 2021-08-05
+  name: Frontier of Computational Social Science
+  events: 
+    - name: "9:00 - 10:30 Frontier of Computational Social Science"
+    - name: "10:30 - 13:00 Research Idea Pitch by Participants"
