--- a/_data/2022/tokyo/schedule.yml
+++ b/_data/2022/tokyo/schedule.yml
@@ -3,7 +3,7 @@
 - date: 2022-08-01
   name: Introduction
   events: 
-    - name: "9:00 - 9:30 Welcome and Logistics"
+    - name: "9:00 - 9:30 Welcome and Logistics (概要説明)"
     - name: "9:30 - 11:00 What is Computational Social Science?"
     - name: "11:00 - 12:00 Research Talk by Hirokazu Shirado"
     - name: "12:00 - 13:00 Break"
@@ -38,3 +38,4 @@
   events: 
     - name: "9:00 - 10:30 Frontier of Computational Social Science"
     - name: "10:30 - 13:00 Research Idea Pitch by Participants"
+
