Oxford - Update schedule

--- a/_data/2022/oxford/schedule.yml
+++ b/_data/2022/oxford/schedule.yml
@@ -61,7 +61,7 @@
 - date: July 9, 2022
   name: "Text As Data: Day 2"
   events:
-    - name: "09:30-12:30 Workshop Lena Voita: Text as Data, Part 3"
+    - name: "09:30-12:30 Workshop Lena Voita: [Text as Data, Part 3](https://lena-voita.github.io/nlp_course)"
     - name: "12:30-14:00 Lunch with Lena: Q & A on Text as Data"
 
 - date: July 11, 2022
