--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -430,7 +430,7 @@
     - name: "12:00 - 1:00 Work on Group Projects (*Zoom*)"
     - name: "1:00 - 1:20 Overview of Group and Individual Project Presentations (*Zoom*) [(video)](https://youtu.be/AhDxHjI_y20) & Surprise LIVE Midday Motivation Safiya Noble, Ph.D. (*Zoom*) [(video)](https://youtu.be/toNIP76dNZo)"
     - name: "1:20 - 4:00 Group and Individual Project Presentations (*Zoom*)"
-    - name: "4:00 - 5:00 Closing Plenary and Q&A, Mathematica (*Zoom*) (video)
+    - name: "4:00 - 5:00 Closing Plenary and Q&A, Mathematica (*Zoom*) [(video)](https://youtu.be/B9xXsntX79o)
     
         - [LaVerne H. Council, MBA, DBA](https://www.emeraldone.com/about-us), Founder and Chief Executive Officer, Emerald One, LLC"
         
