--- a/_data/2022/aachen-graz/schedule.yml
+++ b/_data/2022/aachen-graz/schedule.yml
@@ -62,7 +62,7 @@ combine them with data from surveys"
 - date: July 27, 2022
   events:
     - name: "09:30-16:30 Work on projects"
-    - name: "16:00-17:30 Guest lecture by *Alina Arseniev-Koehler*"
+    - name: "16:00-17:30 Guest lecture by *Alina Arseniev-Koehler* [Paper 1](https://www.pnas.org/doi/10.1073/pnas.2108801119), [Paper 2](https://pubmed.ncbi.nlm.nih.gov/33984244/), [Code](https://github.com/arsena-k/discourse_atoms)"
 
 - date: July 28, 2022
   events:
