--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -61,7 +61,7 @@ closing:
 speakers: 
   title: Guest Speakers 
   people:
-    - name: Shawndra B Hill, Ph.D.
+    - name: Shawndra B. Hill, Ph.D.
       image: /assets/images/Shawndra_Hill.jpeg
       bio: "Dr. Shawndra Hill joined the Marketing Division at Columbia Business School as a part-time senior lecturer in September 2020. She received her PhD and MPhil in Information Systems from NYU's Stern School of Business in 2007 and 2003 respectively, and her BS in Mathematics from Spelman College and her BEE in Electrical Engineering from Georgia Institute of Technology in 1995. Presently, Shawndra Hill is also a Principal Scientist and Manager in Tech. Prior to joining industry, she was a professor in the Operations and Information Management Department at the Wharton School of the University of Pennsylvania. Broadly, she studies data mining, machine learning and statistical relational learning and their alignment with business problems. Specifically, she researches the value to companies of mining data on how consumers interact with each other on online platforms — for targeted marketing, advertising, health and fraud detection purposes. Her current research focuses on cross channel advertising and the resulting interactions between TV content and online (ad click) behaviors."
       website: https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146
