--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -388,7 +388,7 @@
     - name: "Mathematica TAs are Available via Email/Zoom for Consultation (please see [SCHEDULE](https://docs.google.com/spreadsheets/d/1BbbPwVYmfHAT0vi2O_3kApd8aBKFcx0ishDXTHVNUo0/edit#gid=0))"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*) [(video)](https://youtu.be/fxYnTrUCPsk)"
-    - name: "10:00 - 11:30 Mathematica Roundtable (*Zoom*) (LIVE Q&A)
+    - name: "10:00 - 11:30 Mathematica Roundtable (*Zoom*) [(LIVE Q&A)](https://youtu.be/kqvwJf2x3ZI)
     
     
         **Speakers**
