--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -318,13 +318,20 @@ teaching_assistants:
 
 event_staff:
   title: Event Staff (Coleman Research Lab & SICSS-alumni)
-    <img class="Coleman research lab" src="/assets/images/Coleman_research_lab.png" />
+    
+    ### Event Staff - Coleman research lab
+  
+    <img class="Coleman research lab" src="/assets/images/coleman_lab_1.png" />
+    
+    <img class="Coleman research lab" src="/assets/images/coleman_lab_2.png" />
+    
+    <br/>
+    
+    ### Event Staff - SICSS-H/M Alumni Legacy TFs
+   
+    <img class="Teaching fellow" src="/assets/images/teaching_fellow.png" />
     
     
-    <img class="Teaching fellow" src="/assets/images/Teaching_fellow.png" />
-    
-    
-    <img class="R instructor" src="/assets/images/R_instructor.png" />
     
 
 
