--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -319,7 +319,7 @@ teaching_assistants:
 event_staff:
   title: Event Staff (Coleman Research Lab & SICSS-alumni)
     
-    ### Event Staff - Coleman research lab
+    Event Staff - Coleman research lab
   
     <img class="Coleman research lab" src="/assets/images/coleman_lab_1.png" />
     
@@ -327,7 +327,7 @@ event_staff:
     
     <br/>
     
-    ### Event Staff - SICSS-H/M Alumni Legacy TFs
+    Event Staff - SICSS-H/M Alumni Legacy TFs
    
     <img class="Teaching fellow" src="/assets/images/teaching_fellow.png" />
     
