--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -319,15 +319,13 @@ teaching_assistants:
 event_staff:
   title: Event Staff (Coleman Research Lab & SICSS-alumni)
     
-    Event Staff - Coleman research lab
+    <br>Event Staff - Coleman research lab
   
     <img class="Coleman research lab" src="/assets/images/coleman_lab_1.png" />
     
     <img class="Coleman research lab" src="/assets/images/coleman_lab_2.png" />
     
-    <br/>
-    
-    Event Staff - SICSS-H/M Alumni Legacy TFs
+    <br>Event Staff - SICSS-H/M Alumni Legacy TFs
    
     <img class="Teaching fellow" src="/assets/images/teaching_fellow.png" />
     
