--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -313,21 +313,21 @@ planning_team:
 
 teaching_assistants:
   title: Teaching Assistants (Mathematica)
-    <img class="Mathematica TA" src="/assets/images/Mathematica_TA.png" />
+    <img class="Mathematica TA" src="/assets/images/Mathematica_TA.png" width=80% height=80% />
 
 
 event_staff:
   title: Event Staff (Coleman Research Lab & SICSS-alumni)
     
-    <br>Event Staff - Coleman research lab
+    <br><font size = "4">Event Staff - Coleman research lab
   
-    <img class="Coleman research lab" src="/assets/images/coleman_lab_1.png" />
+    <img class="Coleman research lab" src="/assets/images/coleman_lab_1.png" width=80% height=80% />
     
-    <img class="Coleman research lab" src="/assets/images/coleman_lab_2.png" />
+    <img class="Coleman research lab" src="/assets/images/coleman_lab_2.png" width=80% height=80% />
     
-    <br>Event Staff - SICSS-H/M Alumni Legacy TFs
+    <br><font size = "4">Event Staff - SICSS-H/M Alumni Legacy TFs
    
-    <img class="Teaching fellow" src="/assets/images/teaching_fellow.png" />
+    <img class="Teaching fellow" src="/assets/images/teaching_fellow.png" width=80% height=80% />
     
     
     
