--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -68,6 +68,6 @@
   
 - date: 2022-06-30
   name: Project Presentations
-  events:
-    - name: "2:00 - 4:30 Presentations & Farewell"
+  events: 
+    - name: "2:00 - 4:30 <a href='https://drive.google.com/drive/folders/1HBtosGnfQcCTfZbbYs6YFPFQ8SZ0PLtY?usp=sharing' target='_blank'>Presentations</a> & Farewell"
   
