--- a/_data/2022/aachen-graz/schedule.yml
+++ b/_data/2022/aachen-graz/schedule.yml
@@ -38,7 +38,7 @@ combine them with data from surveys"
     - name: "09:30-10:45 Lecture: How to write a (good!) CSS paper"
     - name: "10:45-12:30 Group activity and discussion on how to write a good CSS paper"
     - name: "12:30-13:30 Lunch"
-    - name: "13:30-14:30 Lecture: VLisualize your data: DOs and DON’Ts"
+    - name: "13:30-14:30 Lecture: Visualize your data: DOs and DON’Ts"
     - name: "14:30-16:30 Exercise: Creating informative visualizations using Python"
     - name: "17:30-20:00 [optional] geo-caching in Aachen & Graz"
 
