--- a/_data/2022/india/speakers.yml
+++ b/_data/2022/india/speakers.yml
@@ -1,59 +1,59 @@
 - name: Prof. Jisun An
   image: /assets/images/jisun_an.png
-  bio: Singapore Management University
+  bio: "Singapore Management University"
     
 - name: Dr. Kiran Garimella
   image: /assets/images/kiran_garimella.png
-  bio: Rutgers University
+  bio: "Rutgers University"
   
 - name: Dr. Hemank Lamba
   image: /assets/images/hemank_lamba.png
-  bio: Dataminr
+  bio: "Dataminr"
   
 - name: Prof. Aditya Medury
   image: /assets/images/aditya_medury.png
-  bio: IIT Kanpur
+  bio: "IIT Kanpur"
   
 - name: Dr. Niharika Sachdeva
   image: /assets/images/niharika_sachdeva.png
-  bio: Naukri.com
+  bio: "Naukri.com"
   
 - name: Prof. Rajiv Ratn Shah
   image: /assets/images/rajiv_ratn_shah.png
-  bio: IIIT Delhi
+  bio: "IIIT Delhi"
 
 - name: Prof. Niloy Ganguly
   image: /assets/images/niloy_ganguly.jpeg
-  bio: IIT Kharagpur
+  bio: "IIT Kharagpur"
   
 - name: Suhem Parack
   image: /assets/images/suhem_parack.jpeg
-  bio: Twitter
+  bio: "Twitter"
   
 - name: Ashwin Rajadesingan
   image: /assets/images/ashwin_rajadesingan.png
-  bio: University of Michigan
+  bio: "University of Michigan"
   
 - name: Prof. Fabrício Benevenuto
   image: /assets/images/fabricio.jpeg
-  bio: Universidade Federal de Minas Gerais, Brazil
+  bio: "Universidade Federal de Minas Gerais, Brazil"
   
 - name: Prof. Munmun De Choudhury
   image: /assets/images/munmund.jpeg
-  bio: Georgia Tech
+  bio: "Georgia Tech"
   
 - name: Rikin Gandhi
   image: /assets/images/rikin_gandhi.jpeg
-  bio: Digital Green
+  bio: "Digital Green"
   
 - name: Vasundhara Kaul
   image: /assets/images/vasundhara_kaul.jpeg
-  bio: Purdue University
+  bio: "Purdue University"
   
 - name: Dr. Michael Bailey
   images: /assets/images/michael_bailey.jpeg
-  bio: Meta (Facebook)
+  bio: "Meta (Facebook)"
   
 - name: Garen Checkley
   image: /assets/images/garen.jpeg
-  bio: Google
+  bio: "Google"
