--- a/_data/2022/tokyo/participants.yml
+++ b/_data/2022/tokyo/participants.yml
@@ -6,7 +6,7 @@
 - name: Shogo Masaya
   image: /assets/images/Shogo_Masaya.jpg
   bio: "Shogo Masaya works for an energy company, INPEX. His current interests include data processing, energy transformation and innovation. He received his Ph.D. from Delft University of Technology in applied physics."
-  website: https://
+  website: ""
 
 - name: Makoto Takeuchi
   image: /assets/images/Makoto_Takeuchi.png
