--- a/_data/2022/tokyo/participants.yml
+++ b/_data/2022/tokyo/participants.yml
@@ -1,3 +1,8 @@
+- name: Wentao Xu
+  image: /assets/images/Wentao_Xu.jpeg
+  bio: ""
+  website: ""
+
 - name: Neil Hwang
   image: /assets/images/Neil_Hwang.jpg
   bio: "Neil Hwang is an Assistant Professor of Business and Information Technology at CUNY-Bronx Community College, and his research interests include network statistics, game theory with networks, and causal inference."
@@ -14,7 +19,7 @@
   website: https://scholar.google.com/citations?user=f3E9uncAAAAJ&hl=en
 
 - name: Honoka Toda
-  image: /assets/images/Honoka_Toda.jpg
+  image: /assets/images/Honoka_Toda.jpeg
   bio: "Honoka Toda works for NTT R&D, a Japanese IT company. She is interested in data science and social psychology. Her main research interests are altruistic behavior among groups and psychological factors."
   website: https://twitter.com/toda00toda
 
@@ -22,3 +27,28 @@
   image: /assets/images/Kaveh_Kadkhoda_Mohammadmosaferi.jpg
   bio: "Kaveh Kadkhoda is an independent researcher. His present research primarily focuses on a deeper understanding of complex networks with machine learning and data mining. His career goal is to work where he can have the opportunity to conduct high-quality research while teaching and mentoring undergraduates and graduates."
   website: https://scholar.google.com/citations?user=rWxItvIAAAAJ&hl=en&oi=ao
+
+- name: Zelda Marquardt
+  image: /assets/images/Zelda_Marquardt.jpeg
+  bio: ""
+  website: ""
+
+- name: Georg Ahnert
+  image: /assets/images/Georg_Ahnert.jpeg
+  bio: ""
+  website: ""
+
+- name: Jeehyun Park
+  image: /assets/images/Jeehyun_Park.jpeg
+  bio: ""
+  website: ""
+
+- name: Sabina Insebayeva
+  image: /assets/images/Sabina_Insebayeva.jpeg
+  bio: ""
+  website: ""
+
+- name: Bito Hironobu
+  image: /assets/images/Bito_Hironobu.jpeg
+  bio: ""
+  website: ""
